--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -30,7 +30,7 @@
 
     <!-- Button -->
     <string name="button_disable">Отключить</string>
-    <string name="button_repeat">Повторить</string>
+    <string name="button_repeat">Отложить</string>
 
     <string name="button_show_intro">Вступление</string>
 
@@ -43,7 +43,7 @@
 
     <string name="toast_text_copy">Текст скопирован</string>
 
-    <string name="toast_alarm_repeat">Повтор через %s</string>
+    <string name="toast_alarm_repeat">Отложено на %s</string>
     <string name="toast_alarm_set">Установлено на %s</string>
 
     <!-- Hint -->
