--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -6,7 +6,6 @@
     <string name="header_app">App</string>
     <string name="header_note">Notes</string>
     <string name="header_notification">Notifications</string>
-    <string name="header_save">Save</string>
     <string name="header_other">Other</string>
 
     <!---->
@@ -15,16 +14,15 @@
 
     <string name="title_note_sort">Sort notes</string>
     <string name="title_note_color">Default note color</string>
+    <string name="title_note_save_pause">Save on stop</string>
+    <string name="title_note_save_auto">Auto save</string>
+    <string name="title_note_save_time">Period</string>
 
     <string name="title_alarm_repeat">Repeat time</string>
     <string name="title_alarm_signal">Signal type</string>
     <string name="title_alarm_melody">Melody</string>
     <string name="title_alarm_volume">Volume</string>
     <string name="title_alarm_increase">Volume increase</string>
-
-    <string name="title_save_pause">Save when application paused</string>
-    <string name="title_save_auto">Auto save</string>
-    <string name="title_save_time">Period</string>
 
     <string name="title_other_rate">Rate</string>
     <string name="title_other_privacy_policy">Privacy policy</string>
@@ -36,17 +34,15 @@
 
     <string name="summary_note_sort">Will be used by default</string>
     <string name="summary_note_color">Will be used by default</string>
+    <string name="summary_note_save_pause">Will save note changes when you leave application</string>
+    <string name="summary_note_save_auto">Will save note changes after period of time</string>
+    <string name="summary_note_save_time">Number of minutes</string>
 
     <string name="summary_alarm_repeat">Will be used for repeat notification</string>
     <string name="summary_alarm_signal">will be used for notify you</string>
     <string name="summary_alarm_melody">Will be play on notification</string>
-    <!-- TODO #RELEASE2 Другой текст -->
     <string name="summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="summary_alarm_increase">Smooth volume increase from minimum</string>
-
-    <string name="summary_save_pause">When editing a note</string>
-    <string name="summary_save_auto">When editing a note</string>
-    <string name="summary_save_time">Number of minutes</string>
 
     <!---->
 
@@ -76,6 +72,12 @@
         <item>White</item>
     </string-array>
 
+    <string-array name="text_note_save_time">
+        <item>1 minute</item>
+        <item>3 minutes</item>
+        <item>7 minutes</item>
+    </string-array>
+
     <string-array name="text_alarm_repeat">
         <item>@string/dialog_repeat_0</item>
         <item>@string/dialog_repeat_1</item>
@@ -89,12 +91,6 @@
         <item>Vibration</item>
     </string-array>
 
-    <string-array name="text_save_time">
-        <item>1 minute</item>
-        <item>3 minutes</item>
-        <item>7 minutes</item>
-    </string-array>
-
     <!---->
 
     <string name="key_first_start" translatable="false">key_first_start</string>
@@ -103,16 +99,15 @@
 
     <string name="key_note_sort" translatable="false">key_note_sort</string>
     <string name="key_note_color" translatable="false">key_color</string>
+    <string name="key_note_pause" translatable="false">key_save_pause</string>
+    <string name="key_note_auto" translatable="false">key_save_auto</string>
+    <string name="key_note_time" translatable="false">key_save_time</string>
 
     <string name="key_alarm_repeat" translatable="false">key_alarm_repeat</string>
     <string name="key_alarm_signal" translatable="false">key_alarm_signal</string>
     <string name="key_alarm_melody" translatable="false">key_alarm_melody</string>
     <string name="key_alarm_volume" translatable="false">key_alarm_volume</string>
     <string name="key_alarm_increase" translatable="false">key_alarm_increase</string>
-
-    <string name="key_save_pause" translatable="false">key_save_pause</string>
-    <string name="key_save_auto" translatable="false">key_save_auto</string>
-    <string name="key_save_time" translatable="false">key_save_time</string>
     
     <string name="key_other_rate" translatable="false">key_rate</string>
     <string name="key_other_privacy_policy" translatable="false">key_privacy_policy</string>
