--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -31,15 +31,37 @@
                 android:title="@string/title_note_color"
                 app:iconSpaceReserved="false"/>
 
+        <SwitchPreferenceCompat
+                android:defaultValue="@bool/value_save_pause"
+                android:key="@string/key_note_pause"
+                android:summary="@string/summary_note_save_pause"
+                android:title="@string/title_note_save_pause"
+                app:iconSpaceReserved="false"/>
+
+        <SwitchPreferenceCompat
+                android:defaultValue="@bool/value_save_auto"
+                android:key="@string/key_note_auto"
+                android:summary="@string/summary_note_save_auto"
+                android:title="@string/title_note_save_auto"
+                app:iconSpaceReserved="false"/>
+
+        <Preference
+                android:defaultValue="@integer/value_save_time"
+                android:key="@string/key_note_time"
+                android:summary="@string/summary_note_save_time"
+                android:title="@string/title_note_save_time"
+                app:dependency="@string/key_note_auto"
+                app:iconSpaceReserved="false"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/header_notification" app:iconSpaceReserved="false">
 
-        <SwitchPreferenceCompat
-                android:defaultValue="@bool/value_alarm_increase"
-                android:key="@string/key_alarm_increase"
-                android:summary="@string/summary_alarm_increase"
-                android:title="@string/title_alarm_increase"
+        <Preference
+                android:defaultValue="@integer/value_alarm_repeat"
+                android:key="@string/key_alarm_repeat"
+                android:summary="@string/summary_alarm_repeat"
+                android:title="@string/title_alarm_repeat"
                 app:iconSpaceReserved="false"/>
 
         <Preference
@@ -62,37 +84,11 @@
                 android:title="@string/title_alarm_volume"
                 app:iconSpaceReserved="false"/>
 
-        <Preference
-                android:defaultValue="@integer/value_alarm_repeat"
-                android:key="@string/key_alarm_repeat"
-                android:summary="@string/summary_alarm_repeat"
-                android:title="@string/title_alarm_repeat"
-                app:iconSpaceReserved="false"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory android:title="@string/header_save" app:iconSpaceReserved="false">
-
         <SwitchPreferenceCompat
-                android:defaultValue="@bool/value_save_pause"
-                android:key="@string/key_save_pause"
-                android:summary="@string/summary_save_pause"
-                android:title="@string/title_save_pause"
-                app:iconSpaceReserved="false"/>
-
-        <SwitchPreferenceCompat
-                android:defaultValue="@bool/value_save_auto"
-                android:key="@string/key_save_auto"
-                android:summary="@string/summary_save_auto"
-                android:title="@string/title_save_auto"
-                app:iconSpaceReserved="false"/>
-
-        <Preference
-                android:defaultValue="@integer/value_save_time"
-                android:key="@string/key_save_time"
-                android:summary="@string/summary_save_time"
-                android:title="@string/title_save_time"
-                app:dependency="@string/key_save_auto"
+                android:defaultValue="@bool/value_alarm_increase"
+                android:key="@string/key_alarm_increase"
+                android:summary="@string/summary_alarm_increase"
+                android:title="@string/title_alarm_increase"
                 app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
