--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -4,110 +4,110 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:key="screen">
 
-    <PreferenceCategory android:title="@string/header_app" app:iconSpaceReserved="false">
+    <PreferenceCategory android:title="@string/pref_header_app" app:iconSpaceReserved="false">
 
         <Preference
                 android:defaultValue="@integer/value_app_theme"
-                android:key="@string/key_app_theme"
-                android:summary="@string/summary_app_theme"
-                android:title="@string/title_app_theme"
+                android:key="@string/pref_key_app_theme"
+                android:summary="@string/pref_summary_app_theme"
+                android:title="@string/pref_title_app_theme"
                 app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_note" app:iconSpaceReserved="false">
+    <PreferenceCategory android:title="@string/pref_header_note" app:iconSpaceReserved="false">
 
         <Preference
                 android:defaultValue="@integer/value_note_sort"
-                android:key="@string/key_note_sort"
-                android:summary="@string/summary_note_sort"
-                android:title="@string/title_note_sort"
+                android:key="@string/pref_key_note_sort"
+                android:summary="@string/pref_summary_note_sort"
+                android:title="@string/pref_title_note_sort"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_note_color"
-                android:key="@string/key_note_color"
-                android:summary="@string/summary_note_color"
-                android:title="@string/title_note_color"
+                android:key="@string/pref_key_note_color"
+                android:summary="@string/pref_summary_note_color"
+                android:title="@string/pref_title_note_color"
                 app:iconSpaceReserved="false"/>
 
         <SwitchPreferenceCompat
                 android:defaultValue="@bool/value_save_pause"
-                android:key="@string/key_note_pause"
-                android:summary="@string/summary_note_save_pause"
-                android:title="@string/title_note_save_pause"
+                android:key="@string/pref_key_note_pause"
+                android:summary="@string/pref_summary_note_save_pause"
+                android:title="@string/pref_title_note_save_pause"
                 app:iconSpaceReserved="false"/>
 
         <SwitchPreferenceCompat
                 android:defaultValue="@bool/value_save_auto"
-                android:key="@string/key_note_auto"
-                android:summary="@string/summary_note_save_auto"
-                android:title="@string/title_note_save_auto"
+                android:key="@string/pref_key_note_auto"
+                android:summary="@string/pref_summary_note_save_auto"
+                android:title="@string/pref_title_note_save_auto"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_save_time"
-                android:key="@string/key_note_time"
-                android:summary="@string/summary_note_save_time"
-                android:title="@string/title_note_save_time"
-                app:dependency="@string/key_note_auto"
+                android:key="@string/pref_key_note_time"
+                android:summary="@string/pref_summary_note_save_time"
+                android:title="@string/pref_title_note_save_time"
+                app:dependency="@string/pref_key_note_auto"
                 app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_notification" app:iconSpaceReserved="false">
+    <PreferenceCategory android:title="@string/pref_header_notification" app:iconSpaceReserved="false">
 
         <Preference
                 android:defaultValue="@integer/value_alarm_repeat"
-                android:key="@string/key_alarm_repeat"
-                android:summary="@string/summary_alarm_repeat"
-                android:title="@string/title_alarm_repeat"
+                android:key="@string/pref_key_alarm_repeat"
+                android:summary="@string/pref_summary_alarm_repeat"
+                android:title="@string/pref_title_alarm_repeat"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_alarm_signal"
-                android:key="@string/key_alarm_signal"
-                android:summary="@string/summary_alarm_signal"
-                android:title="@string/title_alarm_signal"
+                android:key="@string/pref_key_alarm_signal"
+                android:summary="@string/pref_summary_alarm_signal"
+                android:title="@string/pref_title_alarm_signal"
                 app:iconSpaceReserved="false"/>
 
         <Preference
-                android:key="@string/key_alarm_melody"
-                android:summary="@string/summary_alarm_melody"
-                android:title="@string/title_alarm_melody"
+                android:key="@string/pref_key_alarm_melody"
+                android:summary="@string/pref_summary_alarm_melody"
+                android:title="@string/pref_title_alarm_melody"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:defaultValue="@integer/value_alarm_volume"
-                android:key="@string/key_alarm_volume"
-                android:summary="@string/summary_alarm_volume"
-                android:title="@string/title_alarm_volume"
+                android:key="@string/pref_key_alarm_volume"
+                android:summary="@string/pref_summary_alarm_volume"
+                android:title="@string/pref_title_alarm_volume"
                 app:iconSpaceReserved="false"/>
 
         <SwitchPreferenceCompat
                 android:defaultValue="@bool/value_alarm_increase"
-                android:key="@string/key_alarm_increase"
-                android:summary="@string/summary_alarm_increase"
-                android:title="@string/title_alarm_increase"
+                android:key="@string/pref_key_alarm_increase"
+                android:summary="@string/pref_summary_alarm_increase"
+                android:title="@string/pref_title_alarm_increase"
                 app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/header_other" app:iconSpaceReserved="false">
+    <PreferenceCategory android:title="@string/pref_header_other" app:iconSpaceReserved="false">
 
         <Preference
-                android:key="@string/key_other_rate"
-                android:title="@string/title_other_rate"
+                android:key="@string/pref_key_other_rate"
+                android:title="@string/pref_title_other_rate"
                 app:iconSpaceReserved="false"/>
 
         <Preference
-                android:key="@string/key_other_privacy_policy"
-                android:title="@string/title_other_privacy_policy"
+                android:key="@string/pref_key_other_privacy_policy"
+                android:title="@string/pref_title_other_privacy_policy"
                 app:iconSpaceReserved="false"/>
 
         <Preference
-                android:key="@string/key_other_about"
-                android:title="@string/title_other_about"
+                android:key="@string/pref_key_other_about"
+                android:title="@string/pref_title_other_about"
                 app:iconSpaceReserved="false"/>
 
     </PreferenceCategory>
