--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <bool name="value_first_start">true</bool>
+    <bool name="pref_first_start">true</bool>
 
-    <integer name="value_app_theme">0</integer>
+    <integer name="pref_app_theme">0</integer>
 
-    <integer name="value_note_sort">0</integer>
-    <integer name="value_note_color">10</integer>
+    <integer name="pref_note_sort">0</integer>
+    <integer name="pref_note_color">10</integer>
+    <bool name="pref_note_save_pause">false</bool>
+    <bool name="pref_note_save_auto">false</bool>
+    <integer name="pref_note_save_time">0</integer>
 
-    <integer name="value_alarm_repeat">0</integer>
+    <integer-array name="pref_note_save_time_array">
+        <item>60000</item>  <!-- 1 минута -->
+        <item>180000</item> <!-- 3 минуты -->
+        <item>420000</item> <!-- 7 минут -->
+    </integer-array>
+
+    <integer name="pref_alarm_repeat">0</integer>
 
     <!-- Value in minutes -->
-    <integer-array name="value_alarm_repeat_array">
+    <integer-array name="pref_alarm_repeat_array">
         <item>10</item>
         <item>30</item>
         <item>60</item>
@@ -19,21 +28,11 @@
         <item>1440</item>   <!-- 1 day -->
     </integer-array>
 
-    <integer name="value_alarm_signal">1</integer>
-    <string name="value_alarm_melody" translatable="false"/>
-    <integer name="value_alarm_volume">75</integer>
-    <bool name="value_alarm_increase">false</bool>
+    <integer name="pref_alarm_signal">1</integer>
+    <string name="pref_alarm_melody" translatable="false"/>
+    <integer name="pref_alarm_volume">75</integer>
+    <bool name="pref_alarm_increase">false</bool>
 
-    <bool name="value_save_pause">false</bool>
-    <bool name="value_save_auto">false</bool>
-    <integer name="value_save_time">0</integer>
-
-    <integer-array name="value_save_time_array">
-        <item>60000</item>  <!-- 1 минута -->
-        <item>180000</item> <!-- 3 минуты -->
-        <item>420000</item> <!-- 7 минут -->
-    </integer-array>
-
-    <integer name="value_develop_open">9</integer>
+    <integer name="pref_develop_open">9</integer>
 
 </resources>
