--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -46,6 +46,9 @@
                     android:importantForAutofill="noExcludeDescendants"
                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                     android:text='@{item.text}'
+                    app:boolExpression='@{!item.check}'
+                    app:falseColor='@{R.attr.clContentContrast}'
+                    app:trueColor='@{R.attr.clContent}'
                     tools:targetApi="o"/>
 
         </LinearLayout>
