--- a/app/src/main/res/values/colors_app.xml
+++ b/app/src/main/res/values/colors_app.xml
@@ -27,6 +27,9 @@
     <color name="content_second_light">#868686</color>  <!-- 767676 / 6e6e6e -->
     <color name="content_second_dark">#C8C8C8</color>   <!-- c3c3c3 / c8c8c8 -->
 
+    <color name="content_contrast_light">#AAAAAA</color>
+    <color name="content_contrast_dark">#999999</color>
+
     <color name="disable_light">#CFCFCF</color>
     <color name="disable_dark">#6A6A6A</color>
 
